--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
             <li><a href="week6.html">Week 6 - Interaction Exercise</a></li>
         </ul>
 
-        <h1>Submission Notes</h1>
+        <h1>Assignment Aim</h1>
 
         <p>For this assignment, we had to submit a small web site that provides a demo of the skills we have developed.  
-            We focused on learning the basic principles of Javascript programming using the Processing API. From here we had to create three designs;
-a simple logo, a simple animation, and an interactive artwork using code. </p>
+            We focused on learning the basic principles of Javascript programming using the Processing API. 
+            From here we had to create three designs;
+<li<a a simple logo, 
+<li<a a simple animation
+<li<a an interactive artwork using code. </p>
 </body>
 </html>
