--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <body>
         
-        <h1>PROGRAMMING FOR DESIGN: ASSIGNMENT 2 - PROCEDURAL THINKING
+        <h1>PROGRAMMING FOR DESIGN: ASSIGNMENT 2 - PROCEDURAL THINKING</h1>
         <h1>Exercises</h1>
         <ul>
             <li><a href="week4.html">Week 4 - Logo Exercise</a></li>
