--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!DOCTYPE html>
+<html>
+    <head>
         <title>PFD Grace Scott-Graham u3223833 </title>
         <link rel="stylesheet" href="index.css">
     </head>  Grace Scott-Graham u3223833 
@@ -24,3 +27,4 @@
          <h1>Submission Notes</h1>
 </body>
 </html>
+        
