--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <!DOCTYPE html>
 <html>
     <head>
+        .element {background-color:#ffe4e4;}
+        .element {border:1px solid #7dfee3;}
         <title>PFD Grace Scott-Graham u3223833 </title>
         <link rel="stylesheet" href="index.css">
     </head>  Grace Scott-Graham u3223833 
