--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
     <head>
         <!DOCTYPE html>
 <html>
-    <head>
-        .element {background-color:#ffe4e4;}
-        .element {border:1px solid #7dfee3;}
+    <head><font size="+2">This is bigger text.</font>
+        
         <title>PFD Grace Scott-Graham u3223833 </title>
         <link rel="stylesheet" href="index.css">
     </head>  Grace Scott-Graham u3223833 
