--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <!DOCTYPE html>
 <html>
-    <head><font size="+2">This is bigger text.</font>
+    <head><font size="+2"></font>
+        
         
         <title>PFD u3223833 </title>
         <link rel="stylesheet" href="index.css">
