--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         </ul>
 
         <h1>Assignment Aim</h1>
-        <p>For this assignment, we had to submit a small web site that provides a demo of the skills we have developed.  
-            We focused on learning the basic principles of Javascript programming using the Processing API. 
-            From here we had to create three designs; a simple logo, a simple animation, and an interactive artwork using code.</p>
+        <p>For this assignment, we had to submit a small web site that provides a demo of 
+            the skills we have developed. We focused on learning the basic principles of 
+            Javascript programming using the Processing API. From here we had to create three designs; 
+            a simple logo, a simple animation, and an interactive artwork using code.</p>
         
          <h1>Submission Notes</h1>
 </body>
