--- a/week4.html
+++ b/week4.html
@@ -11,6 +11,7 @@
         </main>
 
         <h2>Exercise Notes</h2>
-        <p>Add any additional notes about this exercise you want me to read here.</p>
+        <p>This is my Logo design from week 4. I decided to create my own logo, using basic coding to craete my base logo with ellipses and text. The image 
+       located in the middle of my logo was not created by me. Heres the reference - file:///Users/gracescott-graham/Downloads/model.jpeg </p>
     </body>
 </html>
