--- a/week5.html
+++ b/week5.html
@@ -11,6 +11,7 @@
         </main>
 
         <h2>Exercise Notes</h2>
-        <p>Add any additional notes about this exercise you want me to read here.</p>
+        <p>Here is my design from week 5. its a continuous loop of lines consiting of colourful squares. I had troubles trying to figure out
+          how to put each line of squares into a repeat function so my code is fairly long.  </p>
     </body>
 </html>
