--- a/week6.html
+++ b/week6.html
@@ -10,7 +10,8 @@
         <main>
         </main>
 
-        <h2></h2>
-        <p></p>
+      <h2>Exercise Notes</h2>
+        <p>Here is my design from week 6. my interactive design consists of 80 bubbles floating up, with a mousepressed function that allows
+        you to pop them! </p>
     </body>
 </html>
