--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <body>
         
-        <h1 style ="colour: pink; background-colour: yellow;" >PROGRAMMING FOR DESIGN: ASSIGNMENT 2 - PROCEDURAL THINKING</h1>
+        <h1>PROGRAMMING FOR DESIGN: ASSIGNMENT 2 - PROCEDURAL THINKING</h1>
         <h1>Exercises</h1>
         <ul>
             <li><a href="week4.html">Week 4 - Logo Exercise</a></li>
@@ -20,7 +20,7 @@
         </ul>
 
         <h1>Assignment Aim</h1>
-        <p style="colour: black; background-colour: pink;" >For this assignment, we had to submit a small web site that provides a demo of 
+        <p>For this assignment, we had to submit a small web site that provides a demo of 
             the skills we have developed. We focused on learning the basic principles of 
             Javascript programming using the Processing API. From here we had to create three designs; 
             a simple logo, a simple animation, and an interactive artwork using code.</p>
