--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <!DOCTYPE html>
 <html>
     <head><font size="+2"></font>
+        
+  <link rel="stylesheet" href="index.css">
 
         <title>PFD u3223833 </title>
         <link rel="stylesheet" href="index.css">
