--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </head>  
     
     <body>
+        text-align:center;
         
         <h1>PROGRAMMING FOR DESIGN: ASSIGNMENT 2 - PROCEDURAL THINKING</h1>
         <h1>Exercises</h1>
