--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     
     <body>
         text-align:center;
+        background-color:#ff8fc0;
+	    background: linear-gradient(90deg, rgb(249, 176, 247) 0%, rgb(255, 87, 207) 50%, rgba(255,174,188,1) 100%);
+	    border-width: 3px;
+	    border-color: #7dc0f7;
+	    border-style: solid;
         
         <h1>PROGRAMMING FOR DESIGN: ASSIGNMENT 2 - PROCEDURAL THINKING</h1>
         <h1>Exercises</h1>
