--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
     <head>
         <!DOCTYPE html>
 <html>
-    <head><font size="+2"></font>
+    <head></font>
         
-  <link rel="stylesheet" href="index.css">
 
         <title>PFD u3223833 </title>
         <link rel="stylesheet" href="index.css">
