--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     
     <body>
         
-        <h1> text-align:center; 
-            PROGRAMMING FOR DESIGN: ASSIGNMENT 2 - PROCEDURAL THINKING</h1>
+        <h1> PROGRAMMING FOR DESIGN: ASSIGNMENT 2 - PROCEDURAL THINKING</h1>
         <h1>Exercises</h1>
         <ul>
             <li><a href="week4.html">Week 4 - Logo Exercise</a></li>
