--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="Stylesheets/main.css" rel="stylesheet">
         <!DOCTYPE html>
 <html>
     <head></font>
