--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
 
         <h2>ASSIGNMENT AIM</h2> <link rel="stylesheet" href="index.css">
          
-        <p>For this assignment, we had to submit a small web site that provides a demo of 
-            the skills we have developed. We focused on learning the basic principles of 
-            Javascript programming using the Processing API. From here we had to create three designs; 
-            a simple logo, a simple animation, and an interactive artwork using code.</p>
+        <p>FOR THIS ASSIGNMENT WE HAD TO SUBMIT A SMALL FUNCTIONING WEBSITE THAT PROVIDES A DEMO OF THE SKILLS WE HAVE LERNT AND DEVELOPED. 
+            WE FOCUSEED ON LEARNING THE BASIC PRINCIPLES OF JAVASCRIPT PROGRAMMING USING THE PROCESSING API.
+            FROM HERE, WE HAD TO CREATE THREE FUNCTIONING DESIGNS; 
+            1. A SIMPLE LOGO (EXISTING OR ORIGINAL)
+            2. A SIMPLE ANIMATION
+            3. INTERACTIVE ART WORK
+            ALL USING CODE. </p>
         
          <h3>SUBMISSION NOTES</h3> <link rel="stylesheet" href="index.css">
          <link rel="stylesheet" href="index.css">
