--- a/week4.html
+++ b/week4.html
@@ -10,8 +10,9 @@
         <main>
         </main>
 
-        <h2>Exercise Notes</h2>
-        <p>This is my Logo design from week 4. I decided to create my own logo, using basic coding to craete my base logo with ellipses and text. The image 
-       located in the middle of my logo was not created by me. Heres the reference - file:///Users/gracescott-graham/Downloads/model.jpeg </p>
+        <h2>EXERCISE NOTES</h2>
+        <p>THIS IS MY LOGO DESIGN FROM WEEK 4. INSTEAD OF RECREATING AN EXISITING LOGO I DECIDED TO CREATE MY OWN.
+            MY LOGO CONSISTS OF MULTIPLE ELLIPSES, FILLED WITH DIFFERENT SHADES. THERES A SMALL TEXT THAT INCLUDES MY "BRAND NAME".
+            I'VE INCLUDED AN IMAGE (NOT CREATED MY ME). </p>
     </body>
 </html>
