--- a/week5.html
+++ b/week5.html
@@ -10,8 +10,8 @@
         <main>
         </main>
 
-        <h2>Exercise Notes</h2>
-        <p>Here is my design from week 5. its a continuous loop of lines consiting of colourful squares. I had troubles trying to figure out
-          how to put each line of squares into a repeat function so my code is fairly long.  </p>
+        <h2>EXERCISE NOTES</h2>
+        HERE IS MY ANIMATES DESIGN FROM WEEK 5. ITS A CONTINUOUS LOOP OF RAINBOW SQUARES. I HAD TROUBLES TRYING TO PUT
+        EACH DIFFERENT LINE OF SQUARES INTO A REPEAT FUNCTION SO MY CODE IS FAIRLY LONG.... </p>
     </body>
 </html>
