--- a/week6.html
+++ b/week6.html
@@ -10,8 +10,8 @@
         <main>
         </main>
 
-      <h2>Exercise Notes</h2>
-        <p>Here is my design from week 6. my interactive design consists of 80 bubbles floating up, with a mousepressed function that allows
-        you to pop them! </p>
+      <h2>EXERCISE NOTES</h2>
+        <p>HERE IS MY INTERACTIVE DESIGN FROM WEEK 6. IT CONSISTS OF 80 BUBBLES FLOATING UP ALONNG WITH A "MOUSEPRESSED" FUNCTION THAT ALLOWS 
+            YOU TO POP THEM!</p>
     </body>
 </html>
