--- a/week5.html
+++ b/week5.html
@@ -11,7 +11,7 @@
         </main>
 
         <h2>EXERCISE NOTES</h2>
-        HERE IS MY ANIMATES DESIGN FROM WEEK 5. ITS A CONTINUOUS LOOP OF RAINBOW SQUARES. I HAD TROUBLES TRYING TO PUT
+       <p> HERE IS MY ANIMATES DESIGN FROM WEEK 5. ITS A CONTINUOUS LOOP OF RAINBOW SQUARES. I HAD TROUBLES TRYING TO PUT
         EACH DIFFERENT LINE OF SQUARES INTO A REPEAT FUNCTION SO MY CODE IS FAIRLY LONG.... </p>
     </body>
 </html>
